syntax = "proto3";
package service;

import weak "datamodel.proto";

message BuildMessage {
  repeated FileNode fileNodes = 1;
}

message BuildResponse {
  bool success = 1;
}

service BuildService {
  rpc Build(BuildMessage) returns (BuildResponse) {}
}